--- a/nginx/templates/site.conf.template
+++ b/nginx/templates/site.conf.template
@@ -1,10 +1,12 @@
+# nginx/templates/site.conf.template
+
 # HTTP -> HTTPS y ACME webroot
 server {
     listen 80;
     listen [::]:80;
     server_name $DOMAIN;
 
-    # Desafío ACME (Certbot)
+    # Desafío ACME (Certbot - http-01)
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
         default_type "text/plain";
@@ -17,8 +19,10 @@ server {
 
 # HTTPS reverse-proxy
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;         # ← sin "http2" aquí (deprecated en 'listen')
+    listen [::]:443 ssl;
+    http2 on;               # ← habilita HTTP/2 con la directiva moderna
+
     server_name $DOMAIN;
 
     # Certs de Let's Encrypt (volumen compartido)
@@ -41,6 +45,11 @@ server {
     gzip_types text/plain text/css application/json application/javascript application/xml image/svg+xml;
     gzip_min_length 512;
 
+    # ---- Upstream por variable para resolver en runtime ----
+    # Docker DNS embebido (compose) para resolver nombres de servicio
+    resolver 127.0.0.11 valid=30s ipv6=off;
+    set $up_bot "http://bot:8080";
+
     # Proxy headers
     proxy_set_header Host              $host;
     proxy_set_header X-Real-IP         $remote_addr;
@@ -49,12 +58,13 @@ server {
 
     # App Flask (UI + API)
     location / {
-        proxy_pass http://bot:8080/;
+        proxy_pass $up_bot;
         proxy_read_timeout 60s;
     }
 
+    # Health
     location = /health {
-        proxy_pass http://bot:8080/health;
+        proxy_pass $up_bot/health;
     }
 }
 
