--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,7 @@ services:
       - ./certbot/www:/var/www/certbot:ro
       - cert-data:/etc/letsencrypt
     depends_on:
-      bot:
-        condition: service_healthy
+      - bot
     restart: unless-stopped
 
   bot:
@@ -32,36 +31,25 @@ services:
       - WEB_PORT=8080
     expose:
       - "8080"
-    healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://127.0.0.1:8080/health || exit 1"]
-      interval: 10s
-      timeout: 2s
-      retries: 10
-      start_period: 15s
     restart: unless-stopped
 
-  # Primer certificado (si no existe) y renovaciones cada 12h vía webroot
   certbot:
     image: certbot/certbot:latest
     container_name: certbot
-    environment:
-      - DOMAIN=${DOMAIN}
-      - EMAIL=${EMAIL}
     volumes:
       - cert-data:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
     entrypoint: >
       sh -c "
-        certbot certonly --non-interactive --agree-tos
-        --email ${EMAIL} --webroot -w /var/www/certbot -d ${DOMAIN} || true;
+        certbot certonly --non-interactive --agree-tos --email ${EMAIL}
+        --webroot -w /var/www/certbot -d ${DOMAIN} || true;
         while true; do
-          certbot renew --non-interactive --quiet --webroot -w /var/www/certbot;
+          certbot renew --webroot -w /var/www/certbot --quiet;
           sleep 12h;
         done
       "
     restart: unless-stopped
 
-  # Recarga NGINX cuando cambian los certs
   reloader:
     image: alpine:3.20
     container_name: nginx-reloader
