--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,23 @@
-# --- Identidad / proyecto ---
 COMPOSE_PROJECT_NAME=pybot-ruleta
 TZ=Europe/Madrid
 
-# --- Dominio y contacto para Let's Encrypt ---
-# Dominio público que apuntará a tu proxy NGINX (A/AAAA al servidor)
 DOMAIN=ruleta.ejemplo.com
-# Email de contacto para TOS y avisos de renovación de Let's Encrypt
 EMAIL=admin@ejemplo.com
 
-# --- Bot de Telegram ---
-# 🔒 NO subas tu .env con el token real
 TOKEN=REEMPLAZAR_CON_TOKEN_TELEGRAM
 
-# --- App / almacenamiento ---
-# Ruta del JSON (persistido si montas un volumen a ./data)
 DATA_FILE=data/rolls.json
-# Tamaño de ventana por defecto (int)
 DEFAULT_WINDOW=15
-# Límite de datos para estadísticas; vacío = None (usa todos)
 DEFAULT_DATA_LIMIT=
-# "production" | "development"
 ENVIRONMENT=production
-# "DEBUG" | "INFO" | "WARNING" | "ERROR"
 LOG_LEVEL=INFO
 
-# --- Servidor embebido (Flask) ---
-# No toques WEB_HOST en contenedor
 WEB_HOST=0.0.0.0
-# Puerto interno que expone el servicio (lo usa NGINX dentro de la red)
 WEB_PORT=8080
 
-# --- NGINX templating (envsubst) ---
-# La imagen oficial de NGINX generará los .conf a partir de /etc/nginx/templates
+MODE=webhook
+PUBLIC_URL=https://${DOMAIN}
+WEBHOOK_SECRET=pon_aqui_un_secreto_largo_unico
+
 NGINX_ENVSUBST_OUTPUT_DIR=/etc/nginx/conf.d
 
