--- a/nginx/https-template/https.conf.template
+++ b/nginx/https-template/https.conf.template
@@ -1,25 +1,4 @@
-# HTTP: sirve ACME challenge y (opcional) proxy HTTP
-server {
-  listen 80;
-  server_name ${DOMAIN};
-
-  # ACME HTTP-01
-  location ^~ /.well-known/acme-challenge/ {
-    root /var/www/certbot;
-    try_files $uri =404;
-  }
-
-  # Mientras no haya TLS definitivo, puedes dejar proxy HTTP operativo
-  location / {
-    proxy_pass http://bot:8080;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto http;
-  }
-}
-
-# HTTPS: usa cert real (o el self-signed de bootstrap)
+# Se habilita automáticamente cuando existan los certificados
 server {
   listen 443 ssl http2;
   server_name ${DOMAIN};
@@ -27,11 +6,10 @@ server {
   ssl_certificate     /etc/letsencrypt/live/${DOMAIN}/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/${DOMAIN}/privkey.pem;
 
-  # (Opcional) parámetros TLS básicos sensatos
   ssl_protocols TLSv1.2 TLSv1.3;
   ssl_prefer_server_ciphers on;
 
-  # Webhook (lo pasamos tal cual)
+  # Webhook (conservar headers)
   location /telegram/webhook {
     proxy_pass http://bot:8080/telegram/webhook;
     proxy_set_header Host $host;
