--- a/nginx/templates-httponly/site.conf.template
+++ b/nginx/templates-httponly/site.conf.template
@@ -1,19 +1,48 @@
 server {
-  listen 80;
-  server_name ${DOMAIN};
+    listen 80;
+    listen [::]:80;
+    server_name ${DOMAIN};
 
-  # Desafío ACME (webroot)
-  location ^~ /.well-known/acme-challenge/ {
-    root /var/www/certbot;
-    default_type "text/plain";
-  }
+    # ACME webroot
+    location ^~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        default_type "text/plain";
+    }
 
-  # Proxy a la mini-app del bot
-  location / {
-    proxy_pass http://bot:8080/;
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto http;
-  }
+    set $bot http://bot:8080;
+
+    # Webhook
+    location = /telegram/webhook {
+        proxy_pass $bot/telegram/webhook;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto http;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        client_max_body_size 2m;
+    }
+
+    # API
+    location /api/ {
+        proxy_pass $bot$request_uri;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto http;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    # Estáticos
+    location ^~ /statics/ {
+        proxy_pass $bot$request_uri;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto http;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        add_header Cache-Control "public, max-age=3600";
+    }
+
+    # Raíz
+    location / {
+        proxy_pass $bot$request_uri;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto http;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 }
 
