--- a/docker-compose.app.yml
+++ b/docker-compose.app.yml
@@ -3,19 +3,6 @@ services:
     image: ghcr.io/epava1516/pybot-ruleta:latest
     container_name: roulette_bot_telegram
     env_file: .env
-    environment:
-      MODE: ${MODE}
-      DOMAIN: ${DOMAIN}
-      PUBLIC_URL: ${PUBLIC_URL}
-      TOKEN: ${TOKEN}
-      WEBHOOK_SECRET: ${WEBHOOK_SECRET}
-      DATA_FILE: ${DATA_FILE}
-      DEFAULT_WINDOW: ${DEFAULT_WINDOW}
-      DEFAULT_DATA_LIMIT: ${DEFAULT_DATA_LIMIT}
-      ENVIRONMENT: ${ENVIRONMENT}
-      LOG_LEVEL: ${LOG_LEVEL}
-      WEB_HOST: ${WEB_HOST}
-      WEB_PORT: ${WEB_PORT}
     expose:
       - "8080"
     healthcheck:
@@ -31,7 +18,6 @@ services:
     depends_on:
       bot:
         condition: service_started
-    env_file: .env
     environment:
       DOMAIN: ${DOMAIN}
       WEBHOOK_SECRET: ${WEBHOOK_SECRET}
@@ -48,7 +34,9 @@ services:
   certbot:
     image: certbot/certbot:latest
     container_name: certbot
-    env_file: .env
+    environment:
+      DOMAIN: ${DOMAIN}
+      EMAIL: ${EMAIL}
     volumes:
       - ./certbot/www:/var/www/certbot
       - ./certbot/conf:/etc/letsencrypt
